<resources>
    <string name="app_name" translatable="false">RealPrice</string>
    <string name="amount_money_convert">the amount of money to convert</string>
    <string name="last_update_at">Last update: %s</string>
    <string name="choose_currency">Choose a currency</string>
    <string name="search_currency_hint">Search currency or country…</string>
    <string name="popular_currencies">Popular currencies</string>
    <string name="search_results">Results</string>
    <string name="offline_mode">Offline mode</string>
    <string name="settings">Settings</string>
    <string name="allow_data_utilisation">Allow mobile data usage</string>
    <string name="enable_bank_taxes">Take into account bank charges</string>
    <string name="tax_rate">Tax rate</string>
    <string name="fixed_tax">Fixed tax</string>
    <string name="pourcentage" translatable="false">%</string>
    <string name="apply_bank_charges_on">Apply bank charges on\ncurrency</string>
    <string name="limit_tax">Maximum commission</string>
    <string name="taxes_amount_text">Commission of %s which is %s</string>
    <string name="back_button">back button</string>
    <string name="retry">Retry</string>
    <string name="no_internet">No internet</string>
    <string name="enable_internet_to_update">Activate internet once to\ninitialize data</string>
    <string name="close_window">close window</string>

    <string name="AED">United Arab Emirates Dirham</string>
    <string name="AFN">Afghan Afghani</string>
    <string name="ALL">Albanian Lek</string>
    <string name="AMD">Armenian Dram</string>
    <string name="ANG">Netherlands Antillean Guilder</string>
    <string name="AOA">Angolan Kwanza</string>
    <string name="ARS">Argentine Peso</string>
    <string name="AUD">Australian Dollar</string>
    <string name="AWG">Aruban Florin</string>
    <string name="AZN">Azerbaijani Manat</string>
    <string name="BAM">Bosnia and Herzegovina Convertible Mark</string>
    <string name="BBD">Barbadian Dollar</string>
    <string name="BDT">Bangladeshi Taka</string>
    <string name="BGN">Bulgarian Lev</string>
    <string name="BHD">Bahraini Dinar</string>
    <string name="BIF">Burundian Franc</string>
    <string name="BMD">Bermudian Dollar</string>
    <string name="BND">Brunei Dollar</string>
    <string name="BOB">Bolivian Boliviano</string>
    <string name="BRL">Brazilian Real</string>
    <string name="BSD">Bahamian Dollar</string>
    <string name="BTN">Bhutanese Ngultrum</string>
    <string name="BWP">Botswana Pula</string>
    <string name="BYN">Belarusian Ruble</string>
    <string name="BZD">Belize Dollar</string>
    <string name="CAD">Canadian Dollar</string>
    <string name="CDF">Congolese Franc</string>
    <string name="CHF">Swiss Franc</string>
    <string name="CKD">Cook Islands Dollar</string>
    <string name="CLP">Chilean Peso</string>
    <string name="CNY">Chinese Yuan</string>
    <string name="COP">Colombian Peso</string>
    <string name="CRC">Costa Rican Colon</string>
    <string name="CUC">Cuban convertible Peso</string>
    <string name="CUP">Cuban Peso</string>
    <string name="CVE">Cabo Verdean Escudo</string>
    <string name="CZK">Czech Koruna</string>
    <string name="DJF">Djiboutian Franc</string>
    <string name="DKK">Danish Krone</string>
    <string name="DOP">Dominican Peso</string>
    <string name="DZD">Algerian Dinar</string>
    <string name="EGP">Egyptian Pound</string>
    <string name="EHP">Sahrawi Peseta</string>
    <string name="ERN">Eritrean Nakfa</string>
    <string name="ETB">Ethiopian Birr</string>
    <string name="EUR">Euro</string>
    <string name="FJD">Fijian Dollar</string>
    <string name="FKP">Falkland Islands Pound</string>
    <string name="FOK">Faroese Króna</string>
    <string name="GBP">Pound Sterling</string>
    <string name="GEL">Georgian Lari</string>
    <string name="GGP">Guernsey Pound</string>
    <string name="GHS">Ghanaian Cedi</string>
    <string name="GIP">Gibraltar Pound</string>
    <string name="GMD">Gambian Dalasi</string>
    <string name="GNF">Guinean Franc</string>
    <string name="GTQ">Guatemalan Quetzal</string>
    <string name="GYD">Guyanese Dollar</string>
    <string name="HKD">Hong Kong Dollar</string>
    <string name="HNL">Honduran Lempira</string>
    <string name="HRK">Croatian Kuna</string>
    <string name="HTG">Haitian Gourde</string>
    <string name="HUF">Hungarian Forint</string>
    <string name="IDR">Indonesian Rupiah</string>
    <string name="ILS">Israeli new Shekel</string>
    <string name="IMP">Manx Pound</string>
    <string name="INR">Indian Rupee</string>
    <string name="IQD">Iraqi Dinar</string>
    <string name="IRR">Iranian Rial</string>
    <string name="ISK">Icelandic Krona</string>
    <string name="JEP">Jersey Pound</string>
    <string name="JMD">Jamaican Dollar</string>
    <string name="JOD">Jordanian Dinar</string>
    <string name="JPY">Japanese Yen</string>
    <string name="KES">Kenyan Shilling</string>
    <string name="KGS">Kyrgyzstani Som</string>
    <string name="KHR">Cambodian Riel</string>
    <string name="KID">Kiribati Dollar</string>
    <string name="KMF">Comorian Franc</string>
    <string name="KPW">North Korean Won</string>
    <string name="KRW">South Korean Won</string>
    <string name="KWD">Kuwaiti Dinar</string>
    <string name="KYD">Cayman Islands Dollar</string>
    <string name="KZT">Kazakhstani Tenge</string>
    <string name="LAK">Lao Kip</string>
    <string name="LBP">Lebanese Pound</string>
    <string name="LKR">Sri Lankan Rupee</string>
    <string name="LRD">Liberian Dollar</string>
    <string name="LSL">Lesotho Loti</string>
    <string name="LYD">Libyan Dinar</string>
    <string name="MAD">Moroccan Dirham</string>
    <string name="MDL">Moldovan Leu</string>
    <string name="MGA">Malagasy Ariary</string>
    <string name="MKD">Macedonian Denar</string>
    <string name="MMK">Myanmar Kyat</string>
    <string name="MNT">Mongolian Tögrög</string>
    <string name="MOP">Macanese Pataca</string>
    <string name="MRU">Mauritanian Ouguiya</string>
    <string name="MUR">Mauritian Rupee</string>
    <string name="MVR">Maldivian Rufiyaa</string>
    <string name="MWK">Malawian Kwacha</string>
    <string name="MXN">Mexican Peso</string>
    <string name="MYR">Malaysian Ringgit</string>
    <string name="MZN">Mozambican Metical</string>
    <string name="NAD">Namibian Dollar</string>
    <string name="NGN">Nigerian Naira</string>
    <string name="NIO">Nicaraguan Córdoba</string>
    <string name="NOK">Norwegian Krone</string>
    <string name="NPR">Nepalese Rupee</string>
    <string name="NZD">New Zealand Dollar</string>
    <string name="OMR">Omani Rial</string>
    <string name="PAB">Panamanian Balboa</string>
    <string name="PEN">Peruvian Sol</string>
    <string name="PGK">Papua New Guinean Kina</string>
    <string name="PHP">Philippine Peso</string>
    <string name="PKR">Pakistani Rupee</string>
    <string name="PLN">Polish Zloty</string>
    <string name="PND">Pitcairn Islands Dollar</string>
    <string name="PRB">Transnistrian Ruble</string>
    <string name="PYG">Paraguayan Guaraní</string>
    <string name="QAR">Qatari Riyal</string>
    <string name="RON">Romanian Leu</string>
    <string name="RSD">Serbian Dinar</string>
    <string name="RUB">Russian Ruble</string>
    <string name="RWF">Rwandan Franc</string>
    <string name="SAR">Saudi Riyal</string>
    <string name="SBD">Solomon Islands Dollar</string>
    <string name="SCR">Seychellois Rupee</string>
    <string name="SDG">Sudanese Pound</string>
    <string name="SEK">Swedish Krona</string>
    <string name="SGD">Singapore Dollar</string>
    <string name="SHP">Saint Helena Pound</string>
    <string name="SLL">Sierra Leonean Leone</string>
    <string name="SLS">Somaliland Shilling</string>
    <string name="SOS">Somali Shilling</string>
    <string name="SRD">Surinamese Dollar</string>
    <string name="SSP">South Sudanese Pound</string>
    <string name="STN">Sao Tome and Príncipe Dobra</string>
    <string name="SVC">Salvadoran Colón</string>
    <string name="SYP">Syrian Pound</string>
    <string name="SZL">Swazi Lilangeni</string>
    <string name="THB">Thai Baht</string>
    <string name="TJS">Tajikistani Somoni</string>
    <string name="TMT">Turkmenistan Manat</string>
    <string name="TND">Tunisian Dinar</string>
    <string name="TOP">Tongan Paʻanga</string>
    <string name="TRY">Turkish Lira</string>
    <string name="TTD">Trinidad and Tobago Dollar</string>
    <string name="TVD">Tuvaluan Dollar</string>
    <string name="TWD">New Taiwan Dollar</string>
    <string name="TZS">Tanzanian Shilling</string>
    <string name="UAH">Ukrainian Hryvnia</string>
    <string name="UGX">Ugandan Shilling</string>
    <string name="USD">United States Dollar</string>
    <string name="UYU">Uruguayan Peso</string>
    <string name="UZS">Uzbekistani Som</string>
    <string name="VED">Venezuelan bolívar digital</string>
    <string name="VES">Venezuelan Bolívar Soberano</string>
    <string name="VND">Vietnamese Dong</string>
    <string name="VUV">Vanuatu Vatu</string>
    <string name="WST">Samoan Tala</string>
    <string name="XAF">Central African CFA Franc BEAC</string>
    <string name="XCD">East Caribbean Dollar</string>
    <string name="XOF">West African CFA Franc BCEAO</string>
    <string name="XPF">CFP Franc (Franc Pacifique)</string>
    <string name="YER">Yemeni Rial</string>
    <string name="ZAR">South African Rand</string>
    <string name="ZMW">Zambian Kwacha</string>
    <string name="ZWB">RTGS Dollar</string>
    <string name="ZWL">Zimbabwean Dollar</string>
    <string name="Abkhazia">Abkhazian Apsar</string>
    <string name="Artsakh">Artsakh Dram</string>
    <string name="SLE">Sierra Leonean Leone</string>
    <string name="XCG">Caribbean Guilder</string>
    <string name="XDR">IMF Special Drawing Rights</string>
</resources>