<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="28sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/settings_allow_data_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_title"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"

        android:labelFor="@+id/settings_bank_taxes_switch_text"

        android:text="@string/allow_data_utilisation"
        app:layout_constraintBottom_toBottomOf="@+id/settings_allow_data_switch"
        app:layout_constraintEnd_toStartOf="@+id/settings_allow_data_switch"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_allow_data_switch" />

    <TextView
        android:id="@+id/settings_bank_taxes_switch_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_bank_taxes"

        android:labelFor="@+id/settings_bank_taxes_switch"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.089" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/settings_bank_taxes_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="@+id/settings_bank_taxes_switch_text"
        app:layout_constraintEnd_toEndOf="@+id/settings_allow_data_switch"
        app:layout_constraintTop_toTopOf="@+id/settings_bank_taxes_switch_text" />

    <TextView
        android:id="@+id/settings_tax_rate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/settings_tax_rate"
        android:text="@string/tax_rate"

        android:textColor="@color/light_grey"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/settings_bank_taxes_switch_text"
        app:layout_constraintTop_toBottomOf="@+id/settings_tax_currency_text"
        app:layout_constraintVertical_bias="0.125" />

    <EditText
        android:id="@+id/settings_tax_rate_input"
        android:layout_width="61dp"
        android:layout_height="53dp"
        android:autofillHints="tax rate"
        android:ems="10"
        android:enabled="false"

        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/settings_tax_rate_text"
        app:layout_constraintEnd_toEndOf="@+id/settings_bank_taxes_switch"
        app:layout_constraintTop_toTopOf="@+id/settings_tax_rate_text" />

    <TextView
        android:id="@+id/settings_fixed_tax_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:labelFor="@+id/settings_fixed_tax_input"
        android:text="@string/fixed_tax"


        android:textColor="@color/light_grey"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/settings_tax_rate_text"
        app:layout_constraintTop_toBottomOf="@+id/settings_tax_rate_text"
        app:layout_constraintVertical_bias="0.148" />

    <EditText
        android:id="@+id/settings_fixed_tax_input"
        android:layout_width="60dp"
        android:layout_height="54dp"
        android:autofillHints="fixed tax"
        android:ems="10"
        android:enabled="false"

        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/settings_fixed_tax_text"
        app:layout_constraintEnd_toEndOf="@+id/settings_tax_rate_input"
        app:layout_constraintTop_toTopOf="@+id/settings_fixed_tax_text" />

    <ImageButton
        android:id="@+id/settings_back_button"
        android:layout_width="31dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"

        android:background="@null"
        android:contentDescription="@string/back_button"
        android:scaleType="fitCenter"

        app:layout_constraintBottom_toBottomOf="@+id/settings_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_title"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/settings_pourcentage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:text="@string/pourcentage"
        app:layout_constraintBottom_toBottomOf="@+id/settings_tax_rate_input"
        app:layout_constraintStart_toEndOf="@+id/settings_tax_rate_input"
        app:layout_constraintTop_toTopOf="@+id/settings_tax_rate_input" />

    <TextView
        android:id="@+id/settings_tax_currency_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_bank_charges_on"
        android:textColor="@color/light_grey"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/settings_fixed_tax_text"
        app:layout_constraintTop_toBottomOf="@+id/settings_bank_taxes_switch_text"
        app:layout_constraintVertical_bias="0.104" />

    <Button
        android:id="@+id/settings_tax_currency_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"

        app:layout_constraintBottom_toBottomOf="@+id/settings_tax_currency_text"
        app:layout_constraintEnd_toEndOf="@+id/settings_fixed_tax_input"
        app:layout_constraintTop_toTopOf="@+id/settings_tax_currency_text" />

    <TextView
        android:id="@+id/settings_limit_tax_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limit_tax"
        android:textColor="@color/light_grey"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/settings_fixed_tax_text"
        app:layout_constraintTop_toBottomOf="@+id/settings_fixed_tax_text"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/settings_limit_tax_input"
        android:layout_width="58dp"
        android:layout_height="56dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:enabled="false"

        app:layout_constraintBottom_toBottomOf="@+id/settings_limit_tax_text"
        app:layout_constraintEnd_toEndOf="@+id/settings_fixed_tax_input"
        app:layout_constraintTop_toTopOf="@+id/settings_limit_tax_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
